--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
                             <a href="lesson101_JS_m2/">Функции ДЗ</a>
                         </li>
                         <li class="content__list-item">
-                            <a href="lesson103_JS_m2/">Урок 103- ДЗ</a>
+                            <a href="lesson103_JS_m2/">Урок 103 - ДЗ</a>
+                        </li>
+                        <li class="content__list-item">
+                            <a href="lesson112_JS_m2/">JS Практика - ДЗ</a>
                         </li>
 
                     </ul>
