--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
                         <li class="content__list-item">
                             <a href="lesson112_JS_m2/">JS Практика - ДЗ</a>
                         </li>
+                        <li class="content__list-item">
+                            <a href="maket_№3_Wake&Bake/">Макет Wake&Bake </a>
+                        </li>
 
                     </ul>
                 </div>
