--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wraper">
         <header class="header">
-            <img class="header__bg-image" src="img/decor/bg-header.png" alt="">
+            <!-- <img class="header__bg-image" src="img/decor/bg-header.png" alt=""> -->
             <div class="header__top">
                 <div class="container">
                     <div class="header__top-inner">
@@ -54,6 +54,12 @@
                         </div>
                         <div class="hero__img">
                             <img src="img/content/girl.png" alt="Девушка с тортом">
+                            <div class="hero__img-control">
+                                <a class="hero__img-button" href="#">
+                                    <img src="img/icons/play.svg" alt="">
+                                </a>
+                                Посмотри, как готовятся наши торты
+                            </div>
                         </div>
                     </div>
                 </div>
