--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -10,14 +10,16 @@
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 
-<body>
+<body class="body">
     <div class="wraper">
         <header class="header">
             <!-- <img class="header__bg-image" src="img/decor/bg-header.png" alt=""> -->
             <div class="header__top">
                 <div class="container">
                     <div class="header__top-inner">
-                        <img class="header__logo" src="img/icons/logos/logo-dark.svg" alt=" Логотип Wake Bake">
+                        <a class="header__logo" href="#">
+                            <img src="img/icons/logos/logo-dark.svg" alt=" Логотип Wake Bake">
+                        </a>
                         <nav class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
@@ -34,6 +36,9 @@
                                 </li>
                             </ul>
                         </nav>
+                        <a class="burger-icon" href="#">
+                            <span></span>
+                        </a>
                     </div>
 
                 </div>
@@ -48,14 +53,20 @@
                                 <span>26.06.2023</span>
                             </div>
                             <h1 class="hero__title">Научись печь торты и десерты с нуля</h1>
-                            <div class="hero__text">За 8 практических занятий ты получишь новые возможности для
-                                самореализации и любимое дело</div>
-                            <a class="button" href="#">Записаться на курс</a>
+                            <p class="hero__text">За 8 практических занятий ты получишь новые возможности для
+                                самореализации и любимое дело</p>
+                            <div class="hero__img-control">
+                                <a class="hero__img-button" data-fslightbox="gallery" href="video/cake.mp4">
+                                    <img src="img/icons/play.svg" alt="">
+                                </a>
+                                Посмотри, как готовятся наши торты
+                            </div>
+                            <a class="hero__button button" href="#">Записаться на курс</a>
                         </div>
                         <div class="hero__img">
                             <img src="img/content/girl.png" alt="Девушка с тортом">
                             <div class="hero__img-control">
-                                <a class="hero__img-button" href="#">
+                                <a class="hero__img-button" data-fslightbox="gallery" href="video/cake.mp4">
                                     <img src="img/icons/play.svg" alt="">
                                 </a>
                                 Посмотри, как готовятся наши торты
@@ -68,6 +79,9 @@
         <main class="main"></main>
         <footer class="footer"></footer>
     </div>
+
+    <script src="js/fslightbox.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
