--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -55,7 +55,7 @@
                             <h1 class="hero__title">Научись печь торты и десерты с нуля</h1>
                             <p class="hero__text">За 8 практических занятий ты получишь новые возможности для
                                 самореализации и любимое дело</p>
-                            <div class="hero__img-control">
+                            <div class="hero__img-control hero__img-control--mobile">
                                 <a class="hero__img-button" data-fslightbox="gallery" href="video/cake.mp4">
                                     <img src="img/icons/play.svg" alt="">
                                 </a>
@@ -66,7 +66,7 @@
                         <div class="hero__img">
                             <img src="img/content/girl.png" alt="Девушка с тортом">
                             <div class="hero__img-control">
-                                <a class="hero__img-button" data-fslightbox="gallery" href="video/cake.mp4">
+                                <a class="hero__img-button" data-fslightbox="video" href="video/cake.mp4">
                                     <img src="img/icons/play.svg" alt="">
                                 </a>
                                 Посмотри, как готовятся наши торты
