--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -81,18 +81,20 @@
             <div class="container">
                 <div class="footer__head">
                     <div class="footer__head-inner">
-                        <img class="cake" src="img/decor/cake-2.png" alt="">
-                        <form class="footer__form">
+                        <div class="footer__image"><img class="cake" src="img/decor/cake-2.png" alt=""></div>
+                        <div class="footer__form">
                             <h2 class="footer__title">Оставить заявку на обучение</h2>
                             <p class="footer__text">Заполни контактные данные, и наш менеджер свяжется с тобой в ближайшее время</p>
-                            <fieldset>
-                                <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
-                                <input class="form__input" type="number" name="number" id="" placeholder="Телефон"> <br>
-                                <input class="form__checkbox" type="checkbox" name="" id="">    Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
-                                    href="#">политикой конфиденциальности</a>
-                            </fieldset>
+                            <form>
+                                <fieldset>
+                                    <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
+                                    <input class="form__input" type="number" name="number" id="" placeholder="Телефон"> <br>
+                                    <input class="form__checkbox" type="checkbox" name="" id="">    Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
+                                        href="#">политикой конфиденциальности</a>
+                                </fieldset>
+                            </form>
                             <a class="footer__button button" href="#">Записаться на курс</a>
-                        </form>
+                        </div>
                     </div>
                 </div>
                 <div class="footer__bottom"></div>
