--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -89,8 +89,8 @@
                                 <fieldset>
                                     <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
                                     <input class="form__input" type="number" name="number" id="" placeholder="Телефон"> <br>
-                                    <input class="form__checkbox" type="checkbox" name="" id="">    Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
-                                        href="#">политикой конфиденциальности</a>
+                                    <input class="form__checkbox" type="checkbox" name="" id=""> <p>   Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
+                                        href="#">политикой конфиденциальности</a> </p>
                                 </fieldset>
                             </form>
                             <a class="footer__button button" href="#">Записаться на курс</a>
