--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -77,33 +77,75 @@
             </section>
         </header>
         <main class="main">
+            <div class="container">
+                <section class="main__info">
+                    <div class="main__info-image">
+                        <img class="main__info-image-big" src="img/content/girl-2.jpg" alt="Девушка с тортом на кухне">
+                        <div class="main__info-presents">
+                            <a class="main__info-button" href="#">
+                                <img class="pressent_button" src="img/icons/gift.svg" alt="">
+                                <p class="pressent_text">Нажми на подарок, чтобы получить наш фирменный рецепт</p>
+                            </a>
+                            
+                        </div>
+                    </div>
+                    <div class="main__info-inner">
+                        <div class="main__info-title">
+                            <h2>Наша школа —</h2>
+                            это уютный дом для начинающих кондитеров
+                            <span>С нами ты погрузишься в удивительный мир кондитерского искусства, получишь новые
+                                знания и профессиональные навыки! Обретёшь веру в свои силы, научишься приготовлению
+                                разнообразных современных и классических десертов</span>
+                            <ul class="main__info-list">
+                                <li class="main__info-item">
+                                    <img src="img/icons/hat-2.svg" alt="">
+                                    Живое общение с наставниками и одногруппниками
+                                </li>
+                                <li class="main__info-item">
+                                    <img src="img/icons/hat-2.svg" alt="">
+                                    Предоставление всех необходимых материалов
+                                </li>
+                                <li class="main__info-item">
+                                    <img src="img/icons/hat-2.svg" alt="">
+                                    Небольшие группы до 6 человек
+                                </li>
+                                <li class="main__info-item">
+                                    <img src="img/icons/hat-2.svg" alt="">
+                                    Большие аудитории для обучения
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </section>
 
 
 
 
 
-
-            <div class="main__bottom">
-                <div class="container">
-                    <div class="footer__head">
-                        <div class="main__bottom-inner">
-                            <div class="main__bottom-image"><img class="cake" src="img/decor/cake-2.png" alt=""></div>
-                            <div class="form">
-                                <h2 class="form-title">Оставить заявку на обучение</h2>
-                                <p class="form-text">Заполни контактные данные, и наш менеджер свяжется с тобой в
-                                    ближайшее время</p>
-                                <form>
-                                    <fieldset>
-                                        <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
-                                        <input class="form__input" type="number" name="number" id=""
-                                            placeholder="Телефон">
-                                        <br>
-                                        <input class="form__checkbox" type="checkbox" name="" id="">
-                                        <p> Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
-                                                href="#">политикой конфиденциальности</a> </p>
-                                    </fieldset>
-                                </form>
-                                <a class="form__button button" href="#">Записаться на курс</a>
+                <div class="main__bottom">
+                    <div class="container">
+                        <div class="footer__head">
+                            <div class="main__bottom-inner">
+                                <div class="main__bottom-image"><img class="cake" src="img/decor/cake-2.png" alt="">
+                                </div>
+                                <div class="form">
+                                    <h2 class="form-title">Оставить заявку на обучение</h2>
+                                    <p class="form-text">Заполни контактные данные, и наш менеджер свяжется с тобой в
+                                        ближайшее время</p>
+                                    <form>
+                                        <fieldset>
+                                            <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
+                                            <input class="form__input" type="number" name="number" id=""
+                                                placeholder="Телефон">
+                                            <br>
+                                            <input class="form__checkbox" type="checkbox" name="" id="">
+                                            <p> Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
+                                                    href="#">политикой конфиденциальности</a> </p>
+                                        </fieldset>
+                                    </form>
+                                    <a class="form__button button" href="#">Записаться на курс</a>
+                                </div>
                             </div>
                         </div>
                     </div>
