--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -128,7 +128,25 @@
                         </ul>
                     </div>
             </section>
-
+            <section class="program">
+                <div class="container">
+                    <h3 class="program__title">
+                        Программа обучения
+                    </h3>
+                    <div class="program__inner">
+                        <span class="program__text">
+                            Продолжительность курса — 4 недели Программа обучения состоит из 8 модулей На каждое занятие
+                            отводится по 6 часов
+                        </span>
+                        <ul class="program__list">
+                            <li class="program__item week-1">Неделя 1</li>
+                            <li class="program__item week-2">Неделя 2</li>
+                            <li class="program__item week-3">Неделя 3</li>
+                            <li class="program__item week-4">Неделя 4</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
 
 
