--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -139,12 +139,58 @@
                             отводится по 6 часов
                         </span>
                         <ul class="program__list">
-                            <li class="program__item week-1">Неделя 1</li>
-                            <li class="program__item week-2">Неделя 2</li>
-                            <li class="program__item week-3">Неделя 3</li>
-                            <li class="program__item week-4">Неделя 4</li>
+                            <li class="program__item week-1">
+                                <a href="#">Неделя 1</a>
+                            </li>
+                            <li class="program__item week-1">
+                                <a href="#">Неделя 2</a>
+                            </li>
+                            <li class="program__item week-1">
+                                <a href="#">Неделя 3</a>
+                            </li>
+                            <li class="program__item week-1">
+                                <a href="#">Неделя 4</a>
+                            </li>
                         </ul>
                     </div>
+                    <details class="accordion">
+                        <summary class="summary__title">
+                            <a href="#">Начало кондитерского пути и создание первого торта</a>
+                        </summary>
+                        <div class="accordion__inner">
+                            <div class="accordion__teoriya">
+                                <h5 class="accordion__inner-title">Теория:</h5>
+                                <ul class="accordion__inner-list">
+                                    <li class="accordion__inner_item">
+                                        <div class="accordion__inner-img">
+                                            <img src="img/icons/hat-2.svg" alt=""> 
+                                        </div>
+                                        <p class="accordion__inner-text">Организация рабочего места</p>
+                                    </li>
+                                    <li class="accordion__inner_item">
+                                        <img src="img/icons/hat-2.svg" alt=""> Подготовка необходимого инвентаря
+                                    </li>
+                                    <li class="accordion__inner_item">
+                                        <img src="img/icons/hat-2.svg" alt=""> Выбор необходимых продуктов
+                                    </li>
+                                    <li class="accordion__inner_item">
+                                        <img src="img/icons/hat-2.svg" alt=""> Советы по закупке необходимых продуктов и инвентаря
+                                    </li>
+                                    <li class="accordion__inner_item">
+                                        <img src="img/icons/hat-2.svg" alt=""> Обзор хранения и заготовки сырья
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="accordion__practic">
+                                <h5 class="accordion__inner-title">Теория:</h5>
+                                <span>Испечёшь капкейки, приготовишь крем и конфи, а также сделаешь своё первое пирожное — медовик</span>
+                            </div>
+                        </div>
+
+
+                        <p>
+                        </p>
+                    </details>
                 </div>
             </section>
 
