--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -154,8 +154,8 @@
                         </ul>
                     </div>
                     <details class="accordion">
-                        <summary class="summary__title">
-                            <a href="#">Начало кондитерского пути и создание первого торта</a>
+                        <summary class="accordion__title">
+                            Начало кондитерского пути и создание первого торта
                         </summary>
                         <div class="accordion__inner">
                             <div class="accordion__teoriya">
