--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -156,7 +156,6 @@
                             </li>
                         </ul>
                     </div>
-
                     <div class="tab-content tab-content--show" id="tab1">
                         <ul class="accordion-list">
                             <li class="accordion-list__item ">
@@ -336,6 +335,7 @@
                         </details> -->
                         </ul>
                     </div>
+
                     <div class="tab-content" id="tab2">
                         <ul class="accordion-list">
                             <li class="accordion-list__item ">
@@ -679,6 +679,23 @@
                             </li>
                         </ul>
                     </div>
+
+                    <div class="program-price_inner">
+                        <div class="program-price_promo">
+                            <div class="program-price_grid">
+                                <div class="program-price__sale">
+                                    <p> Успей получить скидку</p>
+                                    <p>-30%</p>
+                                    <p>до 1 июня</p>
+                                </div>
+                                <div class="program-price__pricing"></div>
+                            </div>
+                        </div>
+                        <div class="program-price_img">
+                            <img src="img/decor/cake.png" alt="">
+                        </div>
+                    </div>
+
 
 
                 </div>
