--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сайт Wake&Bake</title>
     <link rel="stylesheet" href="css/style.css">
@@ -715,10 +715,13 @@
 
                 </div>
             </section>
+            <section class="main__gallery gallery">
+                <div class="container">
 
+                </div>
+            </section>
 
-
-            <div class="main__bottom">
+            <section class="main__bottom">
                 <div class="container">
                     <div class="footer__head">
                         <div class="main__bottom-inner">
@@ -744,7 +747,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
     </div>
     </main>
 
