--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -725,54 +725,79 @@
                         </div>
                         <div class="gallery__content">
                             <div class="gallery_info">
-                                <h2 class="gallery_title title">Фотогаллерея</h2>
-                                <p class="gallery__text">Для комфортного обучения сделаны просторные аудитории,
+                                <h2 class="gallery_title title">
+                                    Фотогаллерея
+                                </h2>
+                                <p class="gallery__text">
+                                    Для комфортного обучения сделаны просторные аудитории,
                                     где предоставляется всё необходимое оборудование. Здесь наши ученики создают
-                                    кулинарные шедевры под присмотром опытных наставников</p>
+                                    кулинарные шедевры под присмотром опытных наставников
+                                </p>
                             </div>
-                            <!-- <div class="gallery__buttons-slider">
-                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M7.992 1.00777L2.016 6.98377L7.992 12.9598L6.984 13.9678L-3.0528e-07 6.98377L6.984 -0.000227365L7.992 1.00777Z"
-                                        fill="#FFA55C" />
-                                    <path
-                                        d="M1.0083 7.70312L1.0083 6.26313L13.2483 6.26312L13.2483 7.70312L1.0083 7.70312Z"
-                                        fill="#FFA55C" />
-                                </svg>
-                                1/7
-                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M5.25653 12.96L11.2325 6.984L5.25654 1.008L6.26454 -3.0528e-07L13.2485 6.984L6.26454 13.968L5.25653 12.96Z"
-                                        fill="#FFA55C" />
-                                    <path
-                                        d="M12.2402 6.26465L12.2402 7.70465L0.000234839 7.70465L0.000234902 6.26465L12.2402 6.26465Z"
-                                        fill="#FFA55C" />
-                                </svg>
-
-                            </div> -->
+                            <div class="gallery_nav">
+                                <button class="gallery__prev" type="button">
+                                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M7.992 1.00777L2.016 6.98377L7.992 12.9598L6.984 13.9678L-3.0528e-07 6.98377L6.984 -0.000227365L7.992 1.00777Z"
+                                            fill="#FFA55C" />
+                                        <path
+                                            d="M1.0083 7.70312L1.0083 6.26313L13.2483 6.26312L13.2483 7.70312L1.0083 7.70312Z"
+                                            fill="#FFA55C" />
+                                    </svg>
+                                </button>
+                                <div class="gallery__pagination"></div>
+                                <button class="gallery__next" type="button">
+                                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M5.25653 12.96L11.2325 6.984L5.25654 1.008L6.26454 -3.0528e-07L13.2485 6.984L6.26454 13.968L5.25653 12.96Z"
+                                            fill="#FFA55C" />
+                                        <path
+                                            d="M12.2402 6.26465L12.2402 7.70465L0.000234839 7.70465L0.000234902 6.26465L12.2402 6.26465Z"
+                                            fill="#FFA55C" />
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="gallery__slider swiper">
-                        <div class="gallery____wrapper swiper-wrapper">
-                            <div class="gallery__slide swiper-slide">Slide 1</div>
-                            <div class="gallery__slide swiper-slide">Slide 2</div>
-                            <div class="gallery__slide swiper-slide">Slide 3</div>
+                        <div class="gallery__wrapper swiper-wrapper">
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/1.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/2.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/3.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/4.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/1.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/2.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/3.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/1.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/2.jpg" alt="">
+                            </div>
+                            <div class="gallery__slide swiper-slide">
+                                <img src="img/content/gallery/3.jpg" alt="">
+                            </div>
                         </div>
-                        <div class="gallery__pagination swiper-pagination"></div>
-                        <div class="gallery__prev swiper-button-prev"></div>
-                        <div class="gallery__next swiper-button-next"></div>
-                        <div class="gallery__scroll swiper-scrollbar"></div>
                     </div>
-
                 </div>
             </section>
-
-
-
-
-            <section class="main__bottom">
+            <section class="main__bottom bottom">
                 <div class="container">
                     <div class="footer__head">
                         <div class="main__bottom-inner">
@@ -799,8 +824,9 @@
                     </div>
                 </div>
             </section>
+
+        </main>
     </div>
-    </main>
 
 
     <footer class="footer">
