--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -763,9 +763,9 @@
                     </div>
                     <div class="gallery__slider swiper">
                         <div class="gallery__wrapper swiper-wrapper">
-                            <div class="gallery__slide swiper-slide">
+                            <a class="gallery__slide swiper-slide data-fslightbox=gallery" href="">
                                 <img src="img/content/gallery/1.jpg" alt="">
-                            </div>
+                            </a>
                             <div class="gallery__slide swiper-slide">
                                 <img src="img/content/gallery/2.jpg" alt="">
                             </div>
