--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -763,36 +763,36 @@
                     </div>
                     <div class="gallery__slider swiper">
                         <div class="gallery__wrapper swiper-wrapper">
-                            <a class="gallery__slide swiper-slide data-fslightbox=gallery" href="">
+                            <a class="gallery__slide swiper-slide" data-fslightbox="gallery" href="img/content/gallery/1.jpg">
                                 <img src="img/content/gallery/1.jpg" alt="">
                             </a>
-                            <div class="gallery__slide swiper-slide">
+                            <a class="gallery__slide swiper-slide" data-fslightbox="gallery" href="img/content/gallery/2.jpg">
                                 <img src="img/content/gallery/2.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <a class="gallery__slide swiper-slide" data-fslightbox="gallery" href="img/content/gallery/3.jpg">
                                 <img src="img/content/gallery/3.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/4.jpg">
                                 <img src="img/content/gallery/4.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/1.jpg">
                                 <img src="img/content/gallery/1.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/2.jpg">
                                 <img src="img/content/gallery/2.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/3.jpg">
                                 <img src="img/content/gallery/3.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <!-- <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/2.jpg">
                                 <img src="img/content/gallery/1.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/2.jpg">
                                 <img src="img/content/gallery/2.jpg" alt="">
-                            </div>
-                            <div class="gallery__slide swiper-slide">
+                            </a>
+                            <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/2.jpg">
                                 <img src="img/content/gallery/3.jpg" alt="">
-                            </div>
+                            </a> -->
                         </div>
                     </div>
                 </div>
