--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -765,31 +765,31 @@
                         <div class="gallery__wrapper swiper-wrapper">
                             <a class="gallery__slide swiper-slide" data-fslightbox="gallery"
                                 href="img/content/gallery/1.jpg">
-                                <img src="img/content/gallery/1.jpg" alt="">
+                                <img src="img/content/gallery/1.jpg" alt="Девушка украшает капкейки">
                             </a>
                             <a class="gallery__slide swiper-slide" data-fslightbox="gallery"
                                 href="img/content/gallery/2.jpg">
-                                <img src="img/content/gallery/2.jpg" alt="">
+                                <img src="img/content/gallery/2.jpg" alt="Шарики и зефирки">
                             </a>
                             <a class="gallery__slide swiper-slide" data-fslightbox="gallery"
                                 href="img/content/gallery/3.jpg">
-                                <img src="img/content/gallery/3.jpg" alt="">
+                                <img src="img/content/gallery/3.jpg" alt="Торт трехярусный">
                             </a>
                             <a class="gallery__slide swiper-slide" data-fslightbox="gallery"
                                 href="img/content/gallery/4.jpg">
-                                <img src="img/content/gallery/4.jpg" alt="">
+                                <img src="img/content/gallery/4.jpg" alt="Несколько девушек украшают торты ягодами">
                             </a>
                             <a class="gallery__slide swiper-slide" data-fslightbox="gallery"
                                 href="img/content/gallery/1.jpg">
-                                <img src="img/content/gallery/1.jpg" alt="">
+                                <img src="img/content/gallery/1.jpg" alt="Девушка украшает капкейки">
                             </a>
                             <a class="gallery__slide swiper-slide" data-fslightbox="gallery"
                                 href="img/content/gallery/2.jpg">
-                                <img src="img/content/gallery/2.jpg" alt="">
+                                <img src="img/content/gallery/2.jpg" alt="Шарики и зефирки">
                             </a>
                             <a class="gallery__slide swiper-slide" data-fslightbox="gallery"
                                 href="img/content/gallery/3.jpg">
-                                <img src="img/content/gallery/3.jpg" alt="">
+                                <img src="img/content/gallery/3.jpg" alt="Торт трехярусный">
                             </a>
                             <!-- <a class="gallery__slide swiper-slide"data-fslightbox="gallery" href="img/content/gallery/2.jpg">
                                 <img src="img/content/gallery/1.jpg" alt="">
@@ -848,7 +848,7 @@
                             <div class="testimonials__slide swiper-slide">
                                 <div class="testimonials__student">
                                     <div class="testimonials__student-img">
-                                        <img src="img/content/testimonials/1.jpg" alt="">
+                                        <img src="img/content/testimonials/1.jpg" alt="Брюнетка в красной рубашке">
                                     </div>
                                     <div class="testimonials__student-name">
                                         Александра
@@ -872,13 +872,13 @@
                             <div class="testimonials__slide swiper-slide">
                                 <div class="testimonials__student">
                                     <div class="testimonials__student-img">
-                                        <img src="img/content/testimonials/2.jpg" alt="">
+                                        <img src="img/content/testimonials/2.jpg" alt="Блондинка в зеленой куртке ">
                                     </div>
                                     <div class="testimonials__student-name">
                                         Елизавета
                                     </div>
                                     <div class="testimonials__student-inst">
-                                        <img src="img/icons/socials/inst-2.svg" alt="">
+                                        <img src="img/icons/socials/inst-2.svg" alt="Паренек Игорь ">
                                         lizzy_av
                                     </div>
                                 </div>
