--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -910,7 +910,8 @@
                                     <span>
                                         Здесь я узнал много чего нового! <br>
                                     </span>
-                                    <br>Спасибо большое Wake & Bake за такой курс! Здесь я узнал много чего нового для меня!
+                                    <br>Спасибо большое Wake & Bake за такой курс! Здесь я узнал много чего нового
+                                    для меня!
                                     Курс очень хороший, захватывает самые актуальные темы для кондитера! Мне понравилось
                                     что всегда была поддержка не только со стороны куратора
                                     но и таких же учеников-кондитеров как и я. Мне прям аж будет не хватать всего этого.
@@ -946,29 +947,26 @@
                     </div>
             </section>
 
-            <section class="main__bottom bottom">
+            <section class="main__contact contact">
                 <div class="container">
-                    <div class="footer__head">
-                        <div class="main__bottom-inner">
-                            <div class="main__bottom-image"><img class="cake" src="img/decor/cake-2.png" alt="">
-                            </div>
-                            <div class="form">
-                                <h3 class="form-title title">Оставить заявку на обучение</h3>
-                                <p class="form-text">Заполни контактные данные, и наш менеджер свяжется с тобой в
-                                    ближайшее время</p>
-                                <form>
-                                    <fieldset>
-                                        <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
-                                        <input class="form__input" type="number" name="number" id=""
-                                            placeholder="Телефон">
-                                        <br>
-                                        <input class="form__checkbox" type="checkbox" name="" id="">
-                                        <p> Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
-                                                href="#">политикой конфиденциальности</a> </p>
-                                    </fieldset>
-                                </form>
-                                <a class="form__button button" href="#">Записаться на курс</a>
-                            </div>
+                    <div class="main__contact-inner">
+                        <div class="main__contact-image"><img class="cake" src="img/decor/cake-2.png" alt="">
+                        </div>
+                        <div class="form">
+                            <h3 class="form-title title">Оставить заявку на обучение</h3>
+                            <p class="form-text">Заполни контактные данные, и наш менеджер свяжется с тобой в
+                                ближайшее время</p>
+                            <form>
+                                <fieldset>
+                                    <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
+                                    <input class="form__input" type="number" name="number" id="" placeholder="Телефон">
+                                    <br>
+                                    <input class="form__checkbox" type="checkbox" name="" id="">
+                                    <p> Нажимая на кнопку, вы соглашаетесь с <a class="form__checkbox-link"
+                                            href="#">политикой конфиденциальности</a> </p>
+                                </fieldset>
+                            </form>
+                            <a class="form__button button" href="#">Записаться на курс</a>
                         </div>
                     </div>
                 </div>
