--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -947,35 +947,41 @@
                     </div>
             </section>
 
-            <section class="main__contact contact">
+            <section class="contact">
                 <div class="container">
-                    <div class="main__contact-inner">
-                        <div class="main__contact-image">
+                    <div class="contact__inner">
+                        <div class="contact__img">
                             <img src="img/decor/cake-2.png" alt="">
                         </div>
-                        <div class="form">
-                            <h2 class="form-title title">Оставить заявку на обучение</h2>
-                            <p class="form-text">Заполни контактные данные, и наш менеджер свяжется с тобой в
+                        <div class="contact__body">
+                            <h2 class="contact__title title">Оставить заявку на обучение</h2>
+                            <p class="contact__text">Заполни контактные данные, и наш менеджер свяжется с тобой в
                                 ближайшее время</p>
-                            <form contact__form>
-                                <fieldset>
-                                    <label class="modal__form-label field">
-                                        <input class="modal__form-input field__input" type="email" placeholder="E-mail">
+                            <form class="contact__form">
+                                <label class="contact__label field">
+                                    <input class="modal__form-input field__input" type="text" placeholder="Имя">
+                                    <span>Введите Имя</span>
+                                </label>
+                                <input class="contact__input" type="tel" name="phone" pattern="[\+]\d{1,3}\d{10}"
+                                    placeholder="Телефон">
+                                <!-- <label>
+                                        <input class="form__input" type="text" name="name" placeholder="Имя">
                                         <span>Введите e-mail</span>
                                     </label>
-                                    <input class="form__input" type="text" name="name" placeholder="Имя"> <br>
-                                    <input class="form__input" type="number" name="number" id="" placeholder="Телефон">
-                                    
-                                    <br>
-                                    <input class="form__checkbox" type="checkbox" name="" id="">
-                                    <p> Нажимая на кнопку, вы соглашаетесь с 
-                                        <a class="form__checkbox-link"
-                                            href="#" target="_blank">
-                                            политикой конфиденциальности
-                                        </a> </p>
-                                </fieldset>
+                                    <label>
+                                        <input class="form__input" type="tel" name="phone" pattern="[\+]\d{1,3}\d{10}" placeholder="Телефон">
+                                        <span>Введите e-mail</span>
+                                    </label> -->
+                                <label class="contact__check-label">
+                                    <input class="contact__checkbox" type="checkbox">
+                                    <p>
+                                        Нажимая на кнопку, вы соглашаетесь с <a class="contact__checkbox-link" href="#" target="_blank">политикой конфиденциальности</a>
+                                    </p>
+                                </label>
+                                <button class="contact__button button" type="submit">
+                                    Записаться на курс
+                                </button>
                             </form>
-                            <a class="form__button button" href="#">Записаться на курс</a>
                         </div>
                     </div>
                 </div>
@@ -1105,6 +1111,7 @@
 
     <script src="js/fslightbox.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/inputmask.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
