--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -23,16 +23,16 @@
                         <nav class="header__nav">
                             <ul class="header__nav-list">
                                 <li class="header__nav-item">
-                                    <a class="header__nav-link" href="#">Программа обучения</a>
+                                    <a class="header__nav-link" href="#programa">Программа обучения</a>
                                 </li>
                                 <li class="header__nav-item">
-                                    <a class="header__nav-link" href="#">Галерея</a>
+                                    <a class="header__nav-link" href="#photo-gallery">Галерея</a>
                                 </li>
                                 <li class="header__nav-item">
-                                    <a class="header__nav-link" href="#">Отзывы</a>
+                                    <a class="header__nav-link" href="#testimonial">Отзывы</a>
                                 </li>
                                 <li class="header__nav-item">
-                                    <a class="header__nav-link" href="#">Контакты</a>
+                                    <a class="header__nav-link" href="#contacts">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -61,7 +61,7 @@
                                 </a>
                                 Посмотри, как готовятся наши торты
                             </div>
-                            <a class="hero__button button" href="#">Записаться на курс</a>
+                            <a class="hero__button button" href="#contacts">Записаться на курс</a>
                         </div>
                         <div class="hero__img">
                             <img src="img/content/girl.png" alt="Девушка с тортом">
@@ -77,7 +77,6 @@
             </section>
         </header>
         <main class="main">
-
             <section class="main__about about">
                 <div class="container">
                     <div class="about__inner">
@@ -128,7 +127,7 @@
                         </ul>
                     </div>
             </section>
-            <section class="main__program program">
+            <section class="main__program program"  id="programa">
                 <div class="container">
                     <h2 class="program__title title">
                         Программа обучения
@@ -717,7 +716,7 @@
 
                 </div>
             </section>
-            <section class="main__gallery gallery">
+            <section class="main__gallery gallery"  id="photo-gallery">
                 <div class="container">
                     <div class="gallery__inner">
                         <div class="gallery__img">
@@ -804,7 +803,7 @@
                     </div>
                 </div>
             </section>
-            <section class="main__testimonials testimonials">
+            <section class="main__testimonials testimonials" id="testimonial">
                 <div class="container">
                     <div class="testimonials__inner">
                         <div class="testimonials__info">
@@ -946,8 +945,7 @@
                         <div class="testimonials__scrollbar swiper-scrollbar"></div>
                     </div>
             </section>
-
-            <section class="contact">
+            <section class="contact" id="contacts">
                 <div class="container">
                     <div class="contact__inner">
                         <div class="contact__img">
@@ -986,11 +984,8 @@
                     </div>
                 </div>
             </section>
-
-
         </main>
     </div>
-
 
     <footer class="footer">
         <div class="container">
@@ -1044,13 +1039,13 @@
                 <div class="footer__col">
                     <ul class="footer__col-list">
                         <li class="footer__col-item">
-                            <a class="footer__col-link" href="#">Программа обучения</a>
+                            <a class="footer__col-link" href="#programa">Программа обучения</a>
                         </li>
                         <li class="footer__col-item">
-                            <a class="footer__col-link" href="#">Галерея</a>
+                            <a class="footer__col-link" href="#photo-gallery">Галерея</a>
                         </li>
                         <li class="footer__col-item">
-                            <a class="footer__col-link" href="#">Отзывы</a>
+                            <a class="footer__col-link" href="#testimonial">Отзывы</a>
                         </li>
                     </ul>
                 </div>
